cloud/w8/day-b/terraform-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx

        ports:
        - containerPort: 80

        volumeMounts:
        - name: my-volume
          mountPath: /data

      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: nginx-pvc
