cloud/w8/day-b/terraform-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
